day24/06、deploys/elk-k/base/kibana/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
spec:
  replicas: 1
  template:
    metadata:
      name: kibana
      labels:
        app: kibana
    spec:
      containers:
      - image: kibana:7.13.1
        name: kibana
        ports:
        - name: http
          containerPort: 5601
