day24/06、deploys/elk-k/base/kibana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 5601
    targetPort: 5601
  selector:
    app: kibana
